Changed database to MySql and changed the ddl hibernate to update in the apllication.operations file

--- a/src/main/resources/templates/addFlight.html
+++ b/src/main/resources/templates/addFlight.html
@@ -122,7 +122,7 @@
                 <p th:if="${#fields.hasErrors('discount')}" th:errors="*{discount}"></p>
             </div>
 
-            <input type="submit" value="Select Flight" sec:authorize="isAuthenticated()" class="btn btn-primary"/>
+            <input type="submit" value="Add Flight" sec:authorize="isAuthenticated()" class="btn btn-primary"/>
         </form>
 
 </div>
